--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,6 @@
 [versions]
 agp = "8.5.0"
+hiltNavigationCompose = "1.2.0"
 kotlin = "1.9.0"
 coreKtx = "1.13.1"
 junit = "4.13.2"
@@ -10,6 +11,8 @@ activityCompose = "1.9.0"
 composeBom = "2024.06.00"
 hilt = "2.51.1"
 navigationCompose = "2.7.7"
+retrofit = "2.9.0"
+gson= "2.10.1"
 
 [libraries]
 junit = { group = "junit", name = "junit", version.ref = "junit" }
@@ -27,10 +30,15 @@ androidx-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-toolin
 androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
+androidx-hilt-navigation-compose = { module = "androidx.hilt:hilt-navigation-compose", version.ref = "hiltNavigationCompose" }
 
 google-dagger-hilt-impl-android = {group = "com.google.dagger", name="hilt-android", version.ref = "hilt"}
 google-dagger-hilt-impl-compiler-android = {group = "com.google.dagger", name="hilt-android-compiler", version.ref = "hilt"}
 androidx-navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigationCompose" }
+
+retrofit = {group = "com.squareup.retrofit2", name="retrofit", version.ref = "retrofit"}
+gson = {group = "com.google.code.gson", name="gson", version.ref = "gson"}
+converter-gson = {group = "com.squareup.retrofit2", name="converter-gson", version.ref = "retrofit"}
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
