--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,13 +8,17 @@ junitVersion = "1.2.0"
 espressoCore = "3.6.0"
 lifecycleRuntimeKtx = "2.8.2"
 activityCompose = "1.9.0"
-composeBom = "2024.06.00"
+composeBom = "2024.04.01"
 hilt = "2.51.1"
+materialIconsExtended = "1.0.5"
 navigationCompose = "2.7.7"
 retrofit = "2.9.0"
 gson= "2.10.1"
+material3Android = "1.0.5"
+materialAndroid="1.0.5"
 
 [libraries]
+androidx-material-icons-extended = { module = "androidx.compose.material:material-icons-extended", version.ref = "materialIconsExtended" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -24,12 +28,12 @@ androidx-lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecyc
 androidx-activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activityCompose" }
 androidx-compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "composeBom" }
 androidx-ui = { group = "androidx.compose.ui", name = "ui" }
-androidx-ui-graphics = { group = "androidx.compose.ui", name = "ui-graphics" }
-androidx-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
-androidx-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview" }
-androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
-androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
-androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
+androidx-ui-graphics = { group = "androidx.compose.ui", name = "ui-graphics", version.ref = "materialAndroid" }
+androidx-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling", version.ref = "materialAndroid"}
+androidx-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview", version.ref = "materialAndroid" }
+androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest", version.ref = "materialAndroid"}
+androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4", version.ref = "materialAndroid"}
+androidx-material = { group = "androidx.compose.material", name = "material",version.ref = "materialAndroid"}
 androidx-hilt-navigation-compose = { module = "androidx.hilt:hilt-navigation-compose", version.ref = "hiltNavigationCompose" }
 
 google-dagger-hilt-impl-android = {group = "com.google.dagger", name="hilt-android", version.ref = "hilt"}
@@ -39,6 +43,7 @@ androidx-navigation-compose = { group = "androidx.navigation", name = "navigatio
 retrofit = {group = "com.squareup.retrofit2", name="retrofit", version.ref = "retrofit"}
 gson = {group = "com.google.code.gson", name="gson", version.ref = "gson"}
 converter-gson = {group = "com.squareup.retrofit2", name="converter-gson", version.ref = "retrofit"}
+androidx-material3-android = { group = "androidx.compose.material3", name = "material3-android", version.ref = "material3Android" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
