--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,6 +13,7 @@ composeBom = "2024.06.00"
 hilt = "2.51.1"
 kps = "2.0.0-1.0.21"
 navigationCompose = "2.7.7"
+playServicesLocation = "21.3.0"
 retrofit = "2.9.0"
 gson= "2.10.1"
 materialAndroid="1.0.5"
@@ -44,6 +45,7 @@ google-dagger-hilt-impl-android = {group = "com.google.dagger", name="hilt-andro
 google-dagger-hilt-impl-compiler-android = {group = "com.google.dagger", name="hilt-android-compiler", version.ref = "hilt"}
 androidx-navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigationCompose" }
 
+play-services-location = { module = "com.google.android.gms:play-services-location", version.ref = "playServicesLocation" }
 retrofit = {group = "com.squareup.retrofit2", name="retrofit", version.ref = "retrofit"}
 gson = {group = "com.google.code.gson", name="gson", version.ref = "gson"}
 converter-gson = {group = "com.squareup.retrofit2", name="converter-gson", version.ref = "retrofit"}
